--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ember-konva",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Small description for ember-konva goes here",
   "keywords": [
     "ember-addon"
   ],
   "repository": "",
   "license": "MIT",
-  "author": "",
+  "author": "Matej Janjić <matej.janjic@productive.io>",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -22,17 +22,18 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.11.1",
-    "ember-cli-htmlbars": "^4.0.0"
+    "ember-cli-htmlbars": "^4.0.0",
+    "konva": "^7.1.4"
   },
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
     "@ember/optional-features": "^1.0.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^0.14.0-alpha.12",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.3.0",
-    "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-cli": "3.23.0-beta.2",
+    "ember-cli": "3.25.0-beta.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.0.0",
@@ -40,10 +41,13 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^3.0.0",
+    "ember-composability-tools": "^1.0.1",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.4.1",
+    "ember-render-helpers": "^0.2.0",
     "ember-resolver": "^6.0.0",
     "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/beta/shas/df505420a7e56f94bfc51f40d3c723e3208db8b3.tgz",
     "ember-source-channel-url": "^2.0.1",
