--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-konva",
   "version": "0.1.0",
-  "description": "Small description for ember-konva goes here",
+  "description": "Ember component bindings for Konva canvas library",
   "keywords": [
     "ember-addon"
   ],
@@ -21,41 +21,41 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.11.1",
-    "ember-cli-htmlbars": "^4.0.0",
-    "konva": "^7.1.4"
+    "ember-cli-babel": "^7.23.1",
+    "ember-cli-htmlbars": "^5.3.1"
   },
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@glimmer/component": "^0.14.0-alpha.12",
+    "@ember/test-helpers": "^2.1.4",
+    "@glimmer/component": "^1.0.3",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.3.0",
+    "ember-auto-import": "^1.10.1",
     "ember-cli": "3.25.0-beta.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^4.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-template-lint": "^2.0.2",
     "ember-cli-uglify": "^3.0.0",
     "ember-composability-tools": "^1.0.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.4.1",
-    "ember-render-helpers": "^0.2.0",
-    "ember-resolver": "^6.0.0",
-    "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/beta/shas/df505420a7e56f94bfc51f40d3c723e3208db8b3.tgz",
-    "ember-source-channel-url": "^2.0.1",
+    "ember-qunit": "^5.1.1",
+    "ember-resolver": "^8.0.2",
+    "ember-source": "^3.24.0",
+    "ember-source-channel-url": "^3.0.0",
     "ember-try": "^1.2.1",
-    "eslint-plugin-ember": "^7.1.0",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-ember": "^10.1.2",
+    "eslint-plugin-node": "^11.1.0",
+    "konva": "^7.2.2",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.2"
+    "qunit": "^2.14.0",
+    "qunit-dom": "^1.6.0"
   },
   "engines": {
     "node": "8.* || >= 10.*"
