--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^5.1.1",
+    "ember-render-helpers": "^0.2.0",
     "ember-resolver": "^8.0.2",
     "ember-source": "^3.24.0",
     "ember-source-channel-url": "^3.0.0",
