--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.10.1",
-    "ember-cli": "3.25.0-beta.1",
+    "ember-cli": "^3.24.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-inject-live-reload": "^2.0.1",
@@ -45,13 +45,13 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^5.1.1",
+    "ember-qunit": "^5.1.2",
     "ember-render-helpers": "^0.2.0",
     "ember-resolver": "^8.0.2",
     "ember-source": "^3.24.0",
     "ember-source-channel-url": "^3.0.0",
     "ember-try": "^1.2.1",
-    "eslint-plugin-ember": "^10.1.2",
+    "eslint-plugin-ember": "^10.2.0",
     "eslint-plugin-node": "^11.1.0",
     "konva": "^7.2.2",
     "loader.js": "^4.7.0",
