--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "ember-auto-import": "^1.10.1",
     "ember-cli-babel": "^7.23.1",
-    "ember-cli-htmlbars": "^5.3.1"
+    "ember-cli-htmlbars": "^5.3.1",
+    "konva": "^7.2.2"
   },
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
@@ -32,7 +34,6 @@
     "@glimmer/component": "^1.0.3",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.10.1",
     "ember-cli": "^3.24.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
@@ -53,7 +54,6 @@
     "ember-try": "^1.2.1",
     "eslint-plugin-ember": "^10.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "konva": "^7.2.2",
     "loader.js": "^4.7.0",
     "qunit": "^2.14.0",
     "qunit-dom": "^1.6.0"
