--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-composability-tools": "^1.0.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
+    "ember-get-config": "^0.3.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^5.1.4",
