--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "ember-auto-import": "^1.11.2",
     "ember-cli-babel": "^7.26.3",
     "ember-cli-htmlbars": "^5.7.1",
-    "ember-get-config": "^0.3.0",
-    "konva": "^7.2.5"
+    "ember-get-config": "^0.3.0"
   },
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
@@ -35,7 +34,7 @@
     "@glimmer/component": "^1.0.4",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "^3.26.0",
+    "ember-cli": "^3.26.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-inject-live-reload": "^2.0.1",
@@ -52,11 +51,14 @@
     "ember-source": "^3.26.1",
     "ember-source-channel-url": "^3.0.0",
     "ember-try": "^1.2.1",
-    "eslint-plugin-ember": "^10.3.0",
+    "eslint-plugin-ember": "^10.4.0",
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "qunit": "^2.15.0",
     "qunit-dom": "^1.6.0"
+  },
+  "peerDependencies": {
+    "konva": "7.x"
   },
   "engines": {
     "node": "8.* || >= 10.*"
