--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ember-auto-import": "^1.11.2",
     "ember-cli-babel": "^7.26.3",
     "ember-cli-htmlbars": "^5.7.1",
-    "ember-get-config": "^0.3.0"
+    "ember-get-config": "^0.3.0",
+    "konva": "^7.2.5"
   },
   "devDependencies": {
     "@ember/edition-utils": "^1.1.1",
