--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-auto-import": "^1.11.2",
-    "ember-cli-babel": "^7.26.3",
+    "ember-auto-import": "^1.11.3",
+    "ember-cli-babel": "^7.26.5",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-get-config": "^0.3.0"
   },
@@ -48,18 +48,16 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
-    "ember-source": "^3.26.1",
+    "ember-source": "^3.27.0",
     "ember-source-channel-url": "^3.0.0",
     "ember-try": "^1.2.1",
-    "eslint-plugin-ember": "^10.4.0",
+    "eslint-plugin-ember": "^10.4.1",
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "qunit": "^2.15.0",
     "qunit-dom": "^1.6.0"
   },
-  "peerDependencies": {
-    "konva": "7.x"
-  },
+  "peerDependencies": {},
   "engines": {
     "node": "8.* || >= 10.*"
   },
